--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Tasks" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Calendar" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Calendar" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Tasks" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
