Form is submitting

--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -37,7 +37,7 @@
         </ion-item>
         <ion-item>
             <ion-label>Priority</ion-label>
-            <ion-input type="text" [(ngModel)]="newTask.priority" name="priority"></ion-input>
+            <ion-input type="number" [(ngModel)]="newTask.priority" name="priority"></ion-input>
         </ion-item>
         <button ion-button type="submit" block>Add Task</button>
     </form>
