inserted the add button

--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -25,8 +25,8 @@
                 <ion-col class="right-col"> {{ task.due }} </ion-col>
             </ion-row>
         </button>
-        <button ion-item (click)="addTask()">
-            add task
+        <button ion-item (click)="addTask()" id="add-task">
+            <ion-icon name="add-circle"></ion-icon> Add Task
         </button>
     </ion-list>
 </ion-content>
