updating firestore by changing the completed flag to true

--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -20,11 +20,11 @@
             </button>
 
             <ion-item-options side="left">
-                <button ion-button color="secondary" (click)="complete(item)">Complete</button>
+                <button ion-button color="secondary" (click)="completeTask(task)">Complete</button>
             </ion-item-options>
 
             <ion-item-options side="right">
-                <button ion-button color="danger" (click)="delete(item)">Delete</button>
+                <button ion-button color="danger" (click)="deleteTask(task)">Delete</button>
             </ion-item-options>
 
         </ion-item-sliding>
