--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -8,10 +8,10 @@
     <ion-list>
         <ion-item-sliding *ngFor='let task of tasks | async'>
 
-            <button ion-item class='sliding-item-button'>
+            <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
                     <ion-col> {{ task.name }} </ion-col>
-                    <ion-col class="right-col">  {{ task.duration }} {{ task.durationUnits }}  </ion-col>
+                    <ion-col class="right-col">  {{ task.duration }} {{ task.durationUnit }}  </ion-col>
                 </ion-row>
                 <ion-row class="bottom-row">
                     <ion-col> project </ion-col>
