adjusting the size of the submit button

--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -30,6 +30,6 @@
             <ion-label>Priority: </ion-label>
             <ion-input type="number" formControlName="priority"></ion-input>
         </ion-item>
-        <button ion-button type="submit" block color="secondary">Create</button>
+        <button ion-button type="submit" block color="secondary" id="submit-button">Create</button>
     </form>
 </ion-content>
