--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the CalendarPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -12,7 +6,13 @@
 
 </ion-header>
 
+<ion-content>
 
-<ion-content padding>
+    <ion-grid>
+        <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.border">
+            <ion-col  class="label"> {{ increment.label }}</ion-col>
+            <ion-col col-10 class="event-space"> event </ion-col>
+        </ion-row>
+    </ion-grid>
 
 </ion-content>
