--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Calendar</ion-title>
+    <ion-title> {{ today | date: 'EEEE, MMM d'}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -9,9 +9,9 @@
 <ion-content>
 
     <ion-grid>
-        <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.border">
+        <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.border" class='row'>
             <ion-col  class="label"> {{ increment.label }}</ion-col>
-            <ion-col col-10 class="event-space"> event </ion-col>
+            <ion-col col-10 class="event-space">  </ion-col>
         </ion-row>
     </ion-grid>
 
