adjusted the buttons and size
the ion-button makes the background color the same as the navBar...not sure why tho

--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -2,8 +2,8 @@
     <ion-navbar>
         <ion-title> {{ date | date: 'EEEE, MMM d'}}</ion-title>
         <ion-buttons end>
-            <button (click)="previousDay()"><ion-icon name="arrow-dropleft"></ion-icon></button>
-            <button (click)="nextDay()"><ion-icon name="arrow-dropright"></ion-icon></button>
+            <button ion-button (click)="previousDay()" class="nav-buttons"><ion-icon name="md-arrow-dropleft-circle"></ion-icon></button>
+            <button ion-button (click)="nextDay()" class="nav-buttons"><ion-icon name="md-arrow-dropright-circle"></ion-icon></button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
