--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the EventsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Events</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+    <ion-list>
+        <ion-item *ngFor='let event of events | async'>
+            <button ion-item class='item-button' (click)="editEvent(event)">
+                <ion-row class="top-row">
+                    <ion-col> {{ event.name }} </ion-col>
+                    <ion-col class="right-col">  {{ event.from }} - {{ event.to }}  </ion-col>
+                </ion-row>
+                <ion-row class="bottom-row">
+                    <ion-col>  </ion-col>
+                    <ion-col class="right-col"> {{ event.frequency }} </ion-col>
+                </ion-row>
+            </button>
+        </ion-item>
+        <button ion-button center (click)="addEvent()" block id="add-event">Create Event</button>
+    </ion-list>
 </ion-content>
