--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -11,8 +11,8 @@
 <ion-content>
     <ion-grid>
         <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.border" class='row'>
-            <ion-col  class="label"> {{ increment.label }}</ion-col>
-            <ion-col col-10 class="event-space" [style.background-color]="increment.color">  </ion-col>
+            <ion-col  class="label"> {{ increment.timeLabel }}</ion-col>
+            <ion-col col-10 class="event-space" [style.background-color]="increment.color"> {{ increment.eventLabel }}  </ion-col>
         </ion-row>
     </ion-grid>
 </ion-content>
