--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -10,9 +10,11 @@
 
 <ion-content>
     <ion-grid>
-        <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.border" class='row'>
+        <ion-row *ngFor='let increment of calendar' [style.border-bottom]="increment.timeBorder" class='row'>
             <ion-col  class="label"> {{ increment.timeLabel }}</ion-col>
-            <ion-col col-10 class="event-space" [style.background-color]="increment.color"> {{ increment.eventLabel }}  </ion-col>
+            <ion-col col-10 class="event-space" [style.background-color]="increment.color" [style.border-bottom]="increment.eventBorder">
+                {{ increment.eventLabel }}
+            </ion-col>
         </ion-row>
     </ion-grid>
 </ion-content>
