saving as dates

--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -16,7 +16,7 @@
         </ion-item>
         <ion-item>
             <ion-label>Due Date: </ion-label>
-            <ion-input type="text" formControlName="due"></ion-input>
+            <ion-input type="date" formControlName="due"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label>Duration: </ion-label>
