--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -10,7 +10,7 @@
 <ion-content>
     <ion-list>
 
-        <ion-item-divider color='light' class="divider"> Overdue Tasks </ion-item-divider>
+        <ion-item-divider color='danger' class="divider"> Overdue Tasks </ion-item-divider>
         <ion-item-sliding *ngFor='let task of overdueTasks | async'>
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
@@ -30,7 +30,7 @@
             </ion-item-options>
         </ion-item-sliding>
 
-        <ion-item-divider color='light' class="divider"> Tasks </ion-item-divider>
+        <ion-item-divider color='primary' class="divider"> Tasks </ion-item-divider>
         <ion-item-sliding *ngFor='let task of tasks | async'>
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
@@ -50,7 +50,7 @@
             </ion-item-options>
         </ion-item-sliding>
 
-        <ion-item-divider color='light' class="divider"> Completed Tasks </ion-item-divider>
+        <ion-item-divider color='secondary' class="divider"> Completed Tasks </ion-item-divider>
         <ion-item-sliding *ngFor='let task of completedTasks | async'>
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
