removed duration unit

--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -15,7 +15,7 @@
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
                     <ion-col> {{ task.name }} </ion-col>
-                    <ion-col class="right-col">  {{ task.duration }} {{ task.durationUnit }}  </ion-col>
+                    <ion-col class="right-col">  {{ task.duration }} mins </ion-col>
                 </ion-row>
                 <ion-row class="bottom-row">
                     <ion-col> project </ion-col>
@@ -35,7 +35,7 @@
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
                     <ion-col> {{ task.name }} </ion-col>
-                    <ion-col class="right-col">  {{ task.duration }} {{ task.durationUnit }}  </ion-col>
+                    <ion-col class="right-col">  {{ task.duration }} mins </ion-col>
                 </ion-row>
                 <ion-row class="bottom-row">
                     <ion-col> project </ion-col>
@@ -55,7 +55,7 @@
             <button ion-item class='sliding-item-button' (click)="editTask(task)">
                 <ion-row class="top-row">
                     <ion-col> {{ task.name }} </ion-col>
-                    <ion-col class="right-col">  {{ task.duration }} {{ task.durationUnit }}  </ion-col>
+                    <ion-col class="right-col">  {{ task.duration }} mins </ion-col>
                 </ion-row>
                 <ion-row class="bottom-row">
                     <ion-col> project </ion-col>
