added buttons to the calendar

--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -13,9 +13,9 @@
     <ion-grid>
         <ion-row *ngFor='let increment of calendar' class='row'>
             <ion-col  class="label"> {{ increment.timeLabel }}</ion-col>
-            <ion-col col-10 [class]="increment.cssClass" [style.background-color]="increment.color" [style.borderColor]="increment.borderColor" >
+            <button col-10 ion-button [class]="increment.cssClass" [style.background-color]="increment.color" [style.borderColor]="increment.borderColor" (click)="displayTask(increment)">
                 {{ increment.eventLabel }}
-            </ion-col>
+            </button>
         </ion-row>
     </ion-grid>
 </ion-content>
