--- a/src/pages/preferences/preferences.html
+++ b/src/pages/preferences/preferences.html
@@ -2,6 +2,9 @@
 
   <ion-navbar>
     <ion-title>Preferences</ion-title>
+    <ion-buttons end>
+        <button ion-button (click)="addPreference()" class="nav-buttons"><ion-icon name="add"></ion-icon></button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -9,11 +12,19 @@
 
 <ion-content>
     <ion-list>
-            <button ion-item *ngFor='let preference of preferences | async' class='item-button' (click)="editPreference(preference)">
-                <ion-row class="top-row">
-                    <ion-col> {{ preference.name }} </ion-col>
-                    <ion-col class="right-col">  {{ preference.from }} - {{ preference.to }}  </ion-col>
-                </ion-row>
-            </button>
+        <ion-item-divider color='light' class='divider'> Common Events </ion-item-divider>
+        <button ion-item *ngFor='let preference of preferences | async' class='item-button' (click)="editPreference(preference)">
+            <ion-row class="top-row">
+                <ion-col> {{ preference.name }} </ion-col>
+                <ion-col class="right-col">  {{ preference.from }} - {{ preference.to }}  </ion-col>
+            </ion-row>
+        </button>
+        <ion-item-divider color='light' class='divider'> Custom Events </ion-item-divider>
+        <button ion-item *ngFor='let preference of preferences | async' class='item-button' (click)="editPreference(preference)">
+            <ion-row class="top-row">
+                <ion-col> {{ preference.name }} </ion-col>
+                <ion-col class="right-col">  {{ preference.from }} - {{ preference.to }}  </ion-col>
+            </ion-row>
+        </button>
     </ion-list>
 </ion-content>
