refactored 'Preferences' to be called 'Events
Also added in the new page for 'new-events'. It suffers from the same duplicated code issue as the edit-task/new-task pages with duplicated forms. But we will refactor this later

--- a/src/pages/edit-event/edit-event.html
+++ b/src/pages/edit-event/edit-event.html
@@ -1,16 +1,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Edit Preference</ion-title>
+    <ion-title>Edit Event</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-    <form [formGroup]="editPreferenceForm" (ngSubmit)="submitForm()">
+    <form [formGroup]="editEventForm" (ngSubmit)="submitForm()">
         <ion-item>
-            <ion-label>Preference Name: </ion-label>
+            <ion-label>Event Name: </ion-label>
             <ion-input type="text" formControlName="name"></ion-input>
         </ion-item>
         <ion-item>
