--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Calendar" tabIcon="calendar"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Tasks" tabIcon="checkbox"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Preferences" tabIcon="settings"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Events" tabIcon="settings"></ion-tab>
 </ion-tabs>
