--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -11,9 +11,9 @@
 
 
 <ion-content>
-    <ion-list>
+    <ion-list *ngIf='isDataAvailable'>
         <ion-item-divider color='light' class='divider'> Common Events </ion-item-divider>
-        <button ion-item *ngFor='let event of commonEvents | async' class='item-button' (click)="editEvent(event)">
+        <button ion-item *ngFor='let event of sortedCommonEvents' class='item-button' (click)="editEvent(event)">
             <ion-row class="top-row">
                 <ion-col> {{ event.name }} </ion-col>
                 <ion-col class="right-col">  {{ event.from }} - {{ event.to }}  </ion-col>
