--- a/src/pages/new-event/new-event.html
+++ b/src/pages/new-event/new-event.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the NewEventPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>new-event</ion-title>
+    <ion-title>New Event</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+    <form [formGroup]="newEventForm" (ngSubmit)="submitForm()">
+        <ion-item>
+            <ion-label>Event Name: </ion-label>
+            <ion-input type="text" formControlName="name"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label>From: </ion-label>
+            <ion-input type="text" formControlName="from"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label>To: </ion-label>
+            <ion-input type="text" formControlName="to"></ion-input>
+        </ion-item>
+        <button ion-button type="submit" block color="secondary" id="update-button">Update</button>
+    </form>
 </ion-content>
