slide to delete functionality works for custom events
dont intend to allow users to delete the common events. instead i will just have a toggle button to turn those on and off. but they will always be there because they are suggested

--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -20,11 +20,16 @@
             </ion-row>
         </button>
         <ion-item-divider color='light' class='divider'> Custom Events </ion-item-divider>
-        <button ion-item *ngFor='let customEvent of sortedCustomEvents' class='item-button' (click)="editEvent(customEvent)">
-            <ion-row class="top-row">
-                <ion-col> {{ customEvent.name }} </ion-col>
-                <ion-col class="right-col">  {{ customEvent.from }} - {{ customEvent.to }}  </ion-col>
-            </ion-row>
-        </button>
+        <ion-item-sliding *ngFor='let customEvent of sortedCustomEvents'>
+            <button ion-item class='item-button' (click)="editEvent(customEvent)">
+                <ion-row class="top-row">
+                    <ion-col> {{ customEvent.name }} </ion-col>
+                    <ion-col class="right-col">  {{ customEvent.from }} - {{ customEvent.to }}  </ion-col>
+                </ion-row>
+            </button>
+            <ion-item-options side="right">
+                <button ion-button color="danger" (click)="deleteEvent(customEvent)">Delete</button>
+            </ion-item-options>
+        </ion-item-sliding>
     </ion-list>
 </ion-content>
