Big commit...should have broken this one up
1. events are added to the calendar based on the days they occur on
2. changed eventLabel to label
3. added colors to events

--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -15,7 +15,7 @@
             <ion-col class="time-label"> {{ increment.timeLabel }}</ion-col>
             <ion-col class="color-label" [style.background-color]='increment.labelColor'> </ion-col>
             <button col-9 ion-button [class]="increment.cssClass" [style.background-color]='increment.incrementColor' [style.border-color]='increment.incrementBorderColor' (click)="displayTask(increment)">
-                {{ increment.eventLabel }}
+                {{ increment.label }}
             </button>
         </ion-row>
     </ion-grid>
