case sensitive values messed up the scheduler
need to make this not case sensitive

--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -30,8 +30,8 @@
         <ion-item>
             <ion-label>Type: </ion-label>
             <ion-select formControlName="type" interface="popover">
-                <ion-option value='work'>Work</ion-option>
-                <ion-option value='personal'>Personal</ion-option>
+                <ion-option value='Work'>Work</ion-option>
+                <ion-option value='Personal'>Personal</ion-option>
             </ion-select>
         </ion-item>
         <button ion-button type="submit" block color="secondary" id="submit-button">Create</button>
